Docs: honest software overview in README; build.yml: trigger voltcore-phase1 + honest release notes